增加解析base64功能

--- a/docker-main/api-starter/pom.xml
+++ b/docker-main/api-starter/pom.xml
@@ -22,6 +22,13 @@
 
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/net.iharder/base64 -->
+        <dependency>
+            <groupId>net.iharder</groupId>
+            <artifactId>base64</artifactId>
+            <version>2.3.9</version>
+        </dependency>
+
         <!--SpringCloud-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
