--- a/docker-main/api-starter/pom.xml
+++ b/docker-main/api-starter/pom.xml
@@ -271,6 +271,13 @@
             <artifactId>orika-core</artifactId>
             <version>1.5.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.belerweb</groupId>
+            <artifactId>pinyin4j</artifactId>
+            <version>2.5.1</version>
+        </dependency>
+
     </dependencies>
 
 
